smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/enums/enum-docs.smithy
$version: "2.0"

namespace smithy.example

enum Foo {
    /// Hello1
    BAR = "hi"
    /// Hello2
    BAZ = "there"
}

